// Copyright Materialize, Inc. and contributors. All rights reserved.
//
// Use of this software is governed by the Business Source License
// included in the LICENSE file.
//
// As of the Change Date specified in that file, in accordance with
// the Business Source License, use of this software will be governed
// by the Apache License, Version 2.0.

syntax = "proto3";

import "repr/src/global_id.proto";
import "storage-types/src/connections.proto";
import "mysql-util/src/desc.proto";

package mz_storage_types.sources.mysql;

message ProtoMySqlSourceConnection {
    reserved 4, 5;
    mz_repr.global_id.ProtoGlobalId connection_id = 1;
    mz_storage_types.connections.ProtoMySqlConnection connection = 2;
    ProtoMySqlSourceDetails details = 3;
}

message ProtoMySqlSourceDetails {
    // These fields marked 'deprecated_' are kept around to migrate old sources since
    // this message is serialized as proto in the catalog.
    repeated mz_mysql_util.ProtoMySqlTableDesc deprecated_tables = 1;
    // This was changed from a string to a repeated string in order to support
    // separate GTID sets for each table. If this field contains a single element,
    // or the `legacy_initial_gtid_set` field is populated, it
    // is the initial GTID set for all tables.
    string deprecated_legacy_initial_gtid_set = 2;
    repeated string deprecated_initial_gtid_set = 3;
}

message ProtoMySqlSourceExportDetails {
    mz_mysql_util.ProtoMySqlTableDesc table = 1;
    string initial_gtid_set = 2;
    repeated string text_columns = 3;
    repeated string ignore_columns = 4;
}

message ProtoMySqlSourceExportStatementDetails {
    mz_mysql_util.ProtoMySqlTableDesc table = 1;
    string initial_gtid_set = 2;
}
